fixed display print

--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 </head>
 <body>
     <div class="display">
-        <div class="numbers">
-            0
-        </div>
+        <div class="numbers"></div>
         <div class="actions">
             <button id="start">Start</button>
             <button id="restart">Restart</button>
