su browser diversi funziona diversamente :/

--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
     <div class="display">
         <div class="numbers"></div>
         <div class="actions">
-            <button id="start">Start</button>
-            <button id="restart">Restart</button>
-            <button id="giveup">Give Up</button>
+            <button onClick="window.location.reload()">Restart</button>
         </div>
 
     </div>
