fixed page reloading bug

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             
         </div>
         <div class="actions">
-            <button onClick="window.location.reload()">Restart</button>
+            <button id="reset">Restart</button>
         </div>
         
 
